Fix  million div dimensions
(was slightly too large)

--- a/main.css
+++ b/main.css
@@ -275,8 +275,8 @@ h1 {
   width: 200px;
 }
 .million .wealth {
-  width: 33.62px;
-  height: 33.62px;
+  width: 31.62px;
+  height: 31.62px;
   background-color: #4CAF50;
 }
 .billion .wealth {
